gap fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,8 @@ padding-right: 15px;
     padding-top: 24px;
     padding-bottom: 24px;
     border-bottom: 1px solid #E7E9FC ;
+    column-gap: 40px;
+    display: flex;
 }
 .portfolio-list {
     flex-wrap: wrap;
@@ -137,16 +139,17 @@ padding-right: 15px;
     box-shadow: 0px 1px 4px 0px;
 }
 .team-list-all {
-    column-gap: 24px;
+    gap: 24px;
 }
 .main-navigation {
     display: flex;
-    column-gap: 40px;
+    gap: 40px;
     align-items: center;
 }
 /* ========================TEXT=================== */
 .first-list {
-    column-gap: 40px;
+    display: flex;
+    gap: 40px;
 }
 .padding-text {
     padding-top: 32px;
@@ -235,7 +238,7 @@ padding-right: 15px;
 }
 .list-central {
     width: 1128px;
-    column-gap: 24px;
+    gap: 24px;
 }
 .benefits-list {
     width: calc((100% - 72px) / 4);
